[gd_scene load_steps=2 format=1]

[ext_resource path="res://change_map.gd" type="Script" id=1]

[node name="change map" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="timer1" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="timer2" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="timer1" to="." method="_on_timeout_1"]

[connection signal="timeout" from="timer2" to="." method="_on_timeout_2"]


